<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/levelNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/level_now"
        app:layout_constraintHorizontal_bias="0.001"
        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintBottom_toTopOf="@id/level_to"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/levelnow"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="40dp"
        android:autofillHints="true"
        android:ems="10"
        android:hint="@string/经验HIT"
        android:text="@string/经验默认"
        android:inputType="number"
        android:selectAllOnFocus="true"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/levelNow"
        app:layout_constraintTop_toTopOf="@id/levelNow"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/level_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/level_to"
        app:layout_constraintBottom_toTopOf="@id/exp_now"
        app:layout_constraintEnd_toEndOf="@id/levelNow"
        app:layout_constraintStart_toStartOf="@id/levelNow"
        app:layout_constraintTop_toTopOf="@id/levelNow" />

    <EditText
        android:id="@+id/edit_to_level"
        android:layout_width="127dp"
        android:layout_height="40dp"
        android:autofillHints="0"
        android:ems="10"
        android:hint="@string/经验HIT"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:text="@string/经验默认"
        app:layout_constraintEnd_toEndOf="@id/levelnow"
        app:layout_constraintStart_toStartOf="@id/levelnow"
        app:layout_constraintTop_toTopOf="@id/level_to"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/exp_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exp_now"
        app:layout_constraintBottom_toTopOf="@id/dongfu"
        app:layout_constraintEnd_toEndOf="@id/levelNow"
        app:layout_constraintStart_toStartOf="@id/levelNow"
        app:layout_constraintTop_toTopOf="@id/level_to" />

    <EditText
        android:id="@+id/Eexpnow"
        android:layout_width="127dp"
        android:layout_height="40dp"
        android:autofillHints="true"
        android:ems="10"
        android:hint="@string/经验HIT"
        android:text="@string/经验默认"
        android:inputType="number"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="@id/levelnow"
        app:layout_constraintStart_toStartOf="@id/levelnow"
        app:layout_constraintTop_toTopOf="@id/exp_now"
        tools:ignore="UnusedAttribute"
        tools:layout_constrainStart_toStartOf="parent"
        tools:layout_constrainTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Emengyouexp"
        android:layout_width="127dp"
        android:layout_height="40dp"
        android:autofillHints="true"
        android:ems="10"
        android:hint="@string/经验HIT"
        android:text="@string/经验默认"
        android:inputType="number"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="@id/levelnow"
        app:layout_constraintStart_toStartOf="@id/levelnow"
        app:layout_constraintTop_toTopOf="@id/mengyou"
        tools:ignore="UnusedAttribute" />

    <EditText
        android:id="@+id/EYouliexp"
        android:layout_width="127dp"
        android:layout_height="40dp"
        android:autofillHints="true"
        android:ems="10"
        android:hint="@string/经验HIT"
        android:text="@string/经验默认"
        android:inputType="number"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="@id/levelnow"
        app:layout_constraintStart_toStartOf="@id/levelnow"
        app:layout_constraintTop_toTopOf="@id/youli"
        tools:ignore="UnusedAttribute" />



    <TextView
        android:id="@+id/dongfu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:text="@string/dongfu"
        app:layout_constraintBottom_toTopOf="@id/jiacheng"
        app:layout_constraintEnd_toEndOf="@id/levelNow"
        app:layout_constraintStart_toStartOf="@id/levelNow"
        app:layout_constraintTop_toBottomOf="@id/exp_now" />

    <TextView
        android:id="@+id/jiacheng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="40dp"
        android:text="@string/jiac"
        app:layout_constraintBottom_toTopOf="@id/youli"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/dongfu" />

    <EditText
        android:id="@+id/Eexp_plus"
        android:layout_width="127dp"
        android:layout_height="40dp"
        android:autofillHints="true"
        android:ems="10"
        android:hint="@string/加成Hit"
        android:inputType="number"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="@id/levelnow"
        app:layout_constraintStart_toStartOf="@id/levelnow"
        app:layout_constraintTop_toTopOf="@id/jiacheng"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/youli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/游历经验"
        app:layout_constraintBottom_toTopOf="@id/mengyou"
        app:layout_constraintEnd_toEndOf="@id/levelNow"
        app:layout_constraintStart_toStartOf="@id/levelNow"
        app:layout_constraintTop_toTopOf="@id/jiacheng" />

    <TextView
        android:id="@+id/mengyou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/盟友"
        app:layout_constraintBottom_toTopOf="@id/Caculate"
        app:layout_constraintEnd_toEndOf="@id/levelNow"
        app:layout_constraintStart_toStartOf="@id/levelNow"
        app:layout_constraintTop_toTopOf="@id/youli" />

    <Button
        android:id="@+id/Caculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/计算"
        android:onClick="onClick"
        app:layout_constraintBottom_toTopOf="@id/Ans"
        app:layout_constraintEnd_toEndOf="@id/levelNow"
        app:layout_constraintStart_toStartOf="@id/levelNow"
        app:layout_constraintTop_toTopOf="@id/mengyou" />

    <TextView
        android:id="@+id/Ans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Caculate" />


    <EditText
        android:id="@+id/Edongfuexp"
        android:layout_width="127dp"
        android:layout_height="40dp"
        android:autofillHints="true"
        android:ems="10"
        android:hint="@string/经验HIT"
        android:text="@string/经验HIT"
        android:inputType="number"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="@id/levelnow"
        app:layout_constraintStart_toStartOf="@id/levelnow"
        app:layout_constraintTop_toTopOf="@id/dongfu"
        tools:ignore="UnusedAttribute" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/Tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:text="@string/Tip"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@id/Caculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/Caculate" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/等级Tip"
        app:layout_constraintTop_toTopOf="@id/levelNow"
        app:layout_constraintStart_toEndOf="@id/levelnow"/>
</androidx.constraintlayout.widget.ConstraintLayout>